transactional service -> reservation menu
