# transactional-service/routes/index.js
@@ -1,9 +1,8 @@
 var express = require("express");
 var router = express.Router();
 
-/* GET home page. */
-router.get("/", function (req, res, next) {
-  res.render("index", { title: "Express" });
-});
+// Role
+const reservationRoutes = require("./reservationRoutes");
+router.use("/reservation", reservationRoutes);
 
 module.exports = router;
