# transactional-service/routes/reservationRoutes.js
@@ -1,0 +1,11 @@
+const express = require("express");
+const router = express.Router();
+const reservationController = require("../controllers/reservationController");
+
+router.get("/", reservationController.getAllReservation);
+router.get("/:id", reservationController.getReservationById);
+router.post("/", reservationController.createReservation);
+router.put("/:id", reservationController.updateReservation);
+router.delete("/:id", reservationController.deleteReservation);
+
+module.exports = router;
